crates/shadml_integration_tests/tests/snapshots/ui__impl-unknown-method.snap
---
source: crates/shadml_integration_tests/tests/ui.rs
expression: output
---
error: 'scaleTo2' is not a method of trait 'Scale'
  --> impl-unknown-method.shadml:4:1
   |
4 | impl Scale F32 where
  | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ unknown method definition
   |
   = help: remove it from the impl, or declare it in the trait
